# zadania

./: README.md
include/: compress.hpp
test/: test.cpp
zadanie1/: CMakeLists.txt  main.cpp
zadanie1/include/: compress.hpp
zadanie1/test/: test.cpp
zadanie2/: CMakeLists.txt  README.md  main.cpp
zadanie2/include/: Change.hpp  Functions.hpp  Page.hpp  TextPage.hpp  TicketsPage.hpp  WelcomePage.hpp
zadanie2/src/: Change.cpp  Functions.cpp  Page.cpp  TextPage.cpp  TicketsPage.cpp  WelcomePage.cpp
zadanie2/test/: test.cpp
zadanie3/: CMakeLists.txt  README.md  main.cpp
zadanie3/include/: collision.hpp  triangle.hpp
zadanie3/src/: collision.cpp  triangle.cpp
zadanie3/test/: test.cpp
